# Algospeak

./: .gitignore  README.md  algospeak_dictionary.json  data-concat.ipynb  data_processing.py  extract_algospeak_posts.py  inspect_algospeek.py  jsonl_to_csv.py  llm_label_posts.py  main.py  posts.txt  posts_10000.txt  pyproject.toml  test_pull.py
hatebase_cleaning/: app.py  clean_hatebase.py
